--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <title>Geometropolis</title>
     </head>
-    <body>
+    <body style="margin: 0">
         <div id="container"></div>
         <script type="module" src="./src/main.ts"></script>
     </body>
